--- a/core/templates/css/custom-slider.css
+++ b/core/templates/css/custom-slider.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 .bx-wrapper {
-	margin-bottom: 1em;
+	margin-bottom: 1rem;
 }
 
 .bx-wrapper .bx-viewport {
@@ -34,7 +34,7 @@
 	border: transparent;
 	background: none;
 	opacity: 0.5;
-	color: #fff;
+	color: rgba(255, 255, 255, 1);
 	text-indent: 0px;
 	width: 15px;
 	margin-top: -14px;
